@@ -1,7 +1,7 @@
 package uk.gov.crowncommercial.dts.scale.cat.service;
 
 import static org.springframework.util.CollectionUtils.isEmpty;
-
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -14,21 +14,30 @@ import java.util.Set;
 import java.util.StringJoiner;
 import java.util.stream.Collectors;
 
+import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
-
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import uk.gov.crowncommercial.dts.scale.cat.exception.AgreementsServiceApplicationException;
-import uk.gov.crowncommercial.dts.scale.cat.exception.AuthorisationFailureException;
-import uk.gov.crowncommercial.dts.scale.cat.exception.JaggaerRPAException;
-import uk.gov.crowncommercial.dts.scale.cat.exception.ResourceNotFoundException;
-import uk.gov.crowncommercial.dts.scale.cat.exception.TendersDBDataException;
+import uk.gov.crowncommercial.dts.scale.cat.exception.*;
 import uk.gov.crowncommercial.dts.scale.cat.model.entity.OrganisationMapping;
+import uk.gov.crowncommercial.dts.scale.cat.model.entity.ProcurementEvent;
 import uk.gov.crowncommercial.dts.scale.cat.model.generated.ScoreAndCommentNonOCDS;
 import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.CompanyData;
 import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.EvaluationCommentList;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.OperatorUser;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.ParameterList;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.ScoreParameter;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.ScoringRequest;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.ScoringTechEnvelope;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.Section;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.SectionList;
 import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.EnvelopeType;
 import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.Supplier;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.SupplierIdentification;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.SupplierScore;
+import uk.gov.crowncommercial.dts.scale.cat.model.jaggaer.SupplierScoreList;
 import uk.gov.crowncommercial.dts.scale.cat.model.rpa.RPAProcessInput;
 import uk.gov.crowncommercial.dts.scale.cat.model.rpa.RPAProcessNameEnum;
 import uk.gov.crowncommercial.dts.scale.cat.repo.RetryableTendersDBDelegate;
@@ -46,12 +55,14 @@ public class SupplierService {
   private final ValidationService validationService;
   private final UserProfileService userService;
   private final JaggaerService jaggaerService;
-  private final RPAGenericService rpaGenericService;
   private static final String RPA_DELIMITER = "~|";
   private static final String RPA_OPEN_ENVELOPE_ERROR_DESC = "Technical button not found";
   private static final String RPA_EVALUATE_ERROR_DESC = "Evaluate Tab button not found";
   public static final String JAGGAER_USER_NOT_FOUND = "Jaggaer user not found";
   public static final String ORG_MAPPING_NOT_FOUND = "Organisation mapping not found";
+  public static final String SECTION_NAME = "Tender";
+  public static final String SECTION_POS = "1";
+  public static final String PARAM_POS = "1";
 
 
   /**
@@ -108,8 +119,10 @@ public class SupplierService {
 
   }
 
+
+
   /**
-   * Update supplier score and comments in Jaggaer
+   * Update supplier score in Jaggaer
    * 
    * @param profile
    * @param projectId
@@ -117,7 +130,7 @@ public class SupplierService {
    * @param scoreAndComments
    * @return status
    */
-  public String updateSupplierScoreAndComment(final String profile, final Integer projectId,
+  public String updateSupplierScores(final String profile, final Integer projectId,
       final String eventId, final List<ScoreAndCommentNonOCDS> scoreAndComments, boolean scoringComplete) {
     log.info("Calling updateSupplierScoreAndComment for {}", eventId);
     var procurementEvent = validationService.validateProjectAndEventIds(projectId, eventId);
@@ -128,88 +141,59 @@ public class SupplierService {
       scoreAndCommentMap.put(scoreAndComment.getOrganisationId(), scoreAndComment);
     }
 
-    var validSuppliers = rpaGenericService.getValidSuppliers(procurementEvent, scoreAndComments
-        .stream().map(ScoreAndCommentNonOCDS::getOrganisationId).collect(Collectors.toList()));
-    var appendSupplierList = new StringJoiner(RPA_DELIMITER);
-    var appendScoreList = new StringJoiner(RPA_DELIMITER);
-    var appendCommentList = new StringJoiner(RPA_DELIMITER);
+    var validSuppliers = getValidSuppliers(procurementEvent, scoreAndComments
+        .stream().map(ScoreAndCommentNonOCDS::getOrganisationId).toList());
+    
+   var supplierScoresList =  new ArrayList<SupplierScore>();
 
     for (Supplier supplier : validSuppliers.getFirst()) {
       var orgId = validSuppliers.getSecond().stream()
-          .filter(org -> org.getExternalOrganisationId().equals(supplier.getCompanyData().getId()))
+          .filter(org -> org.getExternalOrganisationId().equals(Integer.valueOf(supplier.getId())))
           .findFirst();
       if (orgId.isPresent()) {
         var scoreAndCommentNonOCDS = scoreAndCommentMap.get(orgId.get().getOrganisationId());
-        appendSupplierList.add(supplier.getCompanyData().getName());
-        appendScoreList.add(scoreAndCommentNonOCDS.getScore().toString());
-        appendCommentList.add(scoreAndCommentNonOCDS.getComment());
+        var supplierScore = SupplierScore.builder()
+            .supplierIdentification(SupplierIdentification.builder().id(supplier.getId()).build())
+            .scoringTechEnvelope(ScoringTechEnvelope.builder().sectionList(SectionList.builder()
+                .section(Arrays.asList(Section.builder().name(SECTION_NAME).sectionPos(SECTION_POS)
+                    .parameterList(ParameterList.builder()
+                        .parameter(Arrays.asList(ScoreParameter.builder().paramPos(PARAM_POS)
+                            .score(scoreAndCommentNonOCDS.getScore().toString()).build()))
+                        .build())
+                    .build()))
+                .build()).build()).build();
+        
+        supplierScoresList.add(supplierScore);
       }
     }
 
-    // input details
-    var suppliers = appendSupplierList.toString();
-    var comments = appendCommentList.toString();
-    var scores = appendScoreList.toString();
-
-    log.info("Supplier Names: {}", suppliers);
-    log.info("Supplier comments: {}", comments);
-    log.info("Supplier scores: {}", scores);
-
-    var buyerEncryptedPwd = rpaGenericService.getBuyerEncryptedPassword(buyerUser.getUserId());
-    // Creating RPA process input string
-    var inputBuilder = RPAProcessInput.builder().userName(buyerUser.getEmail())
-        .password(buyerEncryptedPwd).ittCode(procurementEvent.getExternalReferenceId())
-        .score(scores).comment(comments).supplierName(suppliers);
-    try {
-      return rpaGenericService.callRPAMessageAPI(inputBuilder.build(),
-          RPAProcessNameEnum.ASSIGN_SCORE);
-    } catch (JaggaerRPAException je) {
-      // Start evaluation event
-      if (je.getMessage().contains(RPA_EVALUATE_ERROR_DESC)) {
-        jaggaerService.startEvaluationAndOpenEnvelope(procurementEvent, buyerUser.getUserId());
-        return rpaGenericService.callRPAMessageAPI(inputBuilder.build(),
-            RPAProcessNameEnum.ASSIGN_SCORE);
-      }
-      // Open envelope event
-      else if (je.getMessage().contains(RPA_OPEN_ENVELOPE_ERROR_DESC)) {
-        jaggaerService.openEnvelope(procurementEvent, buyerUser.getUserId(), EnvelopeType.TECH);
-        return rpaGenericService.callRPAMessageAPI(inputBuilder.build(),
-            RPAProcessNameEnum.ASSIGN_SCORE);
-      } else
-        throw je;
-    } finally {
-      if (scoringComplete) {
-        jaggaerService.completeTechnical(procurementEvent, buyerUser.getUserId());
-      }
+    var scoringRequest = ScoringRequest.builder().rfxReferenceCode(procurementEvent.getExternalReferenceId())
+        .operatorUser(OperatorUser.builder().login(profile).build())
+        .supplierScoreList(SupplierScoreList.builder().supplierScore(supplierScoresList).build()).build();
+    
+    log.info("Scoring Request {}", scoringRequest);
+    var scoreResponse = jaggaerService.createUpdateScores(scoringRequest);
+    
+    if (scoreResponse.getReturnCode() != 0) {
+      jaggaerService.startEvaluationAndOpenEnvelope(procurementEvent,
+          buyerUser.getUserId());
+      jaggaerService.createUpdateScores(scoringRequest);
     }
+    
+    if (scoringComplete) {
+      jaggaerService.completeTechnical(procurementEvent, buyerUser.getUserId());
+      log.info("Successfully updated scores and end evaluation");
+    }
+
+    return "Successfully updated scores";
   }
 
-  /**
-   * Calls RPA to Open Envelope
-   * 
-   * @param userEmail
-   * @param password
-   * @param externalReferenceId
-   * @return
-   */
-  public String callOpenEnvelopeAndUpdateSupplier(final String userEmail, final String password,
-      final String externalReferenceId, final RPAProcessInput processInput) {
-    log.info("Calling OpenEnvelope for {}", externalReferenceId);
-    // Creating RPA process input string
-    var inputBuilder = RPAProcessInput.builder().userName(userEmail).password(password)
-        .ittCode(externalReferenceId);
-    rpaGenericService.callRPAMessageAPI(inputBuilder.build(), RPAProcessNameEnum.OPEN_ENVELOPE);
 
-    // Update score and comment again after succesfull above calls
-    log.info("Update SupplierScoreAndComment after OpenEnvelope");
-    return rpaGenericService.callRPAMessageAPI(processInput, RPAProcessNameEnum.ASSIGN_SCORE);
-  }
-  
   public Collection<ScoreAndCommentNonOCDS> getScoresForSuppliers(final Integer procId,
       final String eventId) {
     var componentFilter = "EVAL_SUPPLIER_ENVELOPE_COMMENTS==ALL;OFFERS";
     var procurementEvent = validationService.validateProjectAndEventIds(procId, eventId);
-    var exportRfxResponse = jaggaerService.getRfxByComponent(procurementEvent.getExternalEventId(), 
+    var exportRfxResponse = jaggaerService.getRfxByComponent(procurementEvent.getExternalEventId(),
         new HashSet<>(Arrays.asList(componentFilter)));
     return exportRfxResponse.getOffersList().getOffer().stream()
         .map(e -> new ScoreAndCommentNonOCDS()
@@ -217,11 +201,11 @@ public class SupplierService {
                 .findOrganisationMappingByExternalOrganisationId(e.getSupplierId())
                 .orElseThrow(() -> new ResourceNotFoundException(ORG_MAPPING_NOT_FOUND))
                 .getOrganisationId())
-            .score(e.getTechPoints()).comment(extractComment(e.getSupplierId(), 
-                exportRfxResponse.getEvaluationCommentList())))
+            .score(e.getTechPoints()).comment(
+                extractComment(e.getSupplierId(), exportRfxResponse.getEvaluationCommentList())))
         .toList();
   }
-  
+
   private String extractComment(Integer supplierId, EvaluationCommentList evaluationCommentList) {
     String defaultComment = "No comment found";
     if (Objects.nonNull(evaluationCommentList.getEnvelopeSupplierCommentList())) {
@@ -231,5 +215,54 @@ public class SupplierService {
       defaultComment = comment.isPresent() ? comment.get() : defaultComment;
     }
     return defaultComment;
+  }
+
+  public Pair<List<Supplier>, Set<OrganisationMapping>> getValidSuppliers(
+          final ProcurementEvent procurementEvent, final List<String> orgIds) {
+    var supplierOrgIds = orgIds.stream().collect(Collectors.toSet());
+    // Retrieve and verify Tenders DB org mappings
+    var supplierOrgMappings =
+            retryableTendersDBDelegate.findOrganisationMappingByOrganisationIdIn(supplierOrgIds);
+    if (isEmpty(supplierOrgMappings)) {
+      var errorDesc =
+              String.format("No supplier organisation mappings found in Tenders DB %s", supplierOrgIds);
+      log.error(errorDesc);
+      throw new JaggaerRPAException(errorDesc);
+    }
+
+    // Find all externalOrgIds
+    var supplierExternalIds = supplierOrgMappings.stream()
+            .map(OrganisationMapping::getExternalOrganisationId).collect(Collectors.toSet());
+
+    // Find actual suppliers of project and event
+    var suppliers = jaggaerService.getRfxWithSuppliers(procurementEvent.getExternalEventId()).getSuppliersList()
+            .getSupplier();
+
+    // Find all unmatched org ids
+    var unMatchedSuppliers = supplierExternalIds.stream()
+            .filter(orgid -> suppliers.stream()
+                    .noneMatch(supplier -> supplier.getCompanyData().getId().equals(orgid)))
+            .toList();
+
+    if (!isEmpty(unMatchedSuppliers)) {
+      var errorDesc =
+              String.format("Supplied organisation mappings not matched with actual suppliers '%s'",
+                      unMatchedSuppliers);
+      log.error(errorDesc);
+      throw new SupplierNotMatchException(errorDesc);
+    }
+
+    // Comparing the requested organisation ids and event suppliers info
+    var matchedSuppliers = suppliers.stream()
+            .filter(supplier -> supplierExternalIds.stream()
+                    .anyMatch(orgId -> orgId.equals(supplier.getCompanyData().getId())))
+            .toList();
+
+    return Pair.of(
+            matchedSuppliers.stream()
+                    .map(e -> Supplier.builder().companyData(e.getCompanyData())
+                            .id(String.valueOf(e.getCompanyData().getId())).build())
+                    .toList(),
+            supplierOrgMappings);
   }
 }
